update user details

--- a/htmlResponse/errorMsg.html
+++ b/htmlResponse/errorMsg.html
@@ -1,8 +1,8 @@
 <head>
-  <title>National Child Protection Authority</title>
+  <title>AUTOASSURE</title>
   <meta
     http-equiv="refresh"
-    content="3; URL=http://www.childprotection.gov.lk/"
+    content="3; URL=https://www.swinburne.edu.au//"
   />
   <meta name="keywords" content="automatic redirection" />
 </head>
@@ -17,7 +17,7 @@
           <tbody>
             <tr>
               <td style="text-align: center">
-                <img width="200" src="https://i.imgur.com/LDV3wbR.jpeg" />
+                <img width="200" src="https://i.imgur.com/goYWLzk.jpeg" />
               </td>
             </tr>
             <tr>
@@ -71,8 +71,7 @@
                             line-height: 1.5em;
                           "
                         >
-                          Please contact the National Child Protection
-                          Authority.
+                          Please contact the AUTOASSURE.
                         </p>
                       </td>
                     </tr>
@@ -117,10 +116,10 @@
                           ©2020
                           <a
                             style="color: #000"
-                            href="http://workingera.com"
+                            href="https://swinburne.instructure.com/"
                             target="_blank"
                           >
-                            National Child Protection Authority</a
+                            AUTOASSURE</a
                           >. All rights reserved.
                         </p>
                       </td>
